<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialogRoot"
    android:background="@drawable/custom1_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:src="@drawable/ic_baseline_cloud_off_24"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_connection"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_msg"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnCancel1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginEnd="0.05dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/cancel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRetry1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginStart="0.05dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/retry"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>