<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rootOfView21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:padding="20sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_24"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20sp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/sign_up"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_surname"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/i_agree_terms_and_condition"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/sign_up" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>